name:          file-exchange
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          file-exchange
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , directory
                  , text
                  , blaze-html >= 0.9 && < 1
                  , blaze-markup
                  , monadlist
                  , filepath >= 1.4 && < 2
                  , time
                  , optparse-applicative
                  , uri-encode
                  , bytestring
                  , wai-extra
                  , http-types
